package integration;

public enum Messagers {
    GAME_CONTROLLER,
    USER,
    PERSON
}
